<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|top"
    android:background="@drawable/bg_auxiliar_gradient"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="5dp"
        android:text="@string/register_tittle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cardView_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/arroba"
                    android:drawablePadding="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cel"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rep_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rep_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rep_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/vinculation_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vinculation_textView"
                    android:layout_width="183dp"
                    android:layout_height="match_parent"
                    android:text="@string/vinculo"
                    android:textSize="17sp"
                    android:drawableStart="@drawable/education"
                    android:drawablePadding="7dp"/>

                <Spinner
                    android:id="@+id/birth_spinner"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:entries="@array/vinculation_list"
                    android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/bttn_register"
                android:layout_width="173dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/bttn_ripple"
                android:drawableStart="@drawable/new_user"
                android:drawablePadding="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/bttn_register"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>